overflow issue fixed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Password Generator</h1>
         <h2>Generate secure, random passwords with the click of a button!</h2>
 
-        <label for="password">Generated Password:</label>
+        <label for="password">Generated Password</label>
         <br>
         <input type="text" id="password" readonly>
         <div>
